@@ -145,10 +145,11 @@ public class DemoBasket extends dsFunctions {
 	{
 		float sx=0.0f, sy=3.40f, sz=7.15f;
 
-		//#if defined(_MSC_VER) && defined(dDOUBLE) 
-		//sy -= 0.01; // Cheat, to make it score under win32/double
-		//#endif
-		sy += 0.046;  //For 'double' on Linux 64bit. //TODO !!! 
+//		//#if defined(_MSC_VER) && defined(dDOUBLE) 
+//		//sy -= 0.01; // Cheat, to make it score under win32/double
+//		//#endif
+		sy += 0.033; // Windows 64 //TODO
+		//sy += 0.046;  //For 'double' on Linux 64bit. //TODO !!! 
 
 		DQuaternion q = new DQuaternion();
 		q.setIdentity();
@@ -218,7 +219,10 @@ public class DemoBasket extends dsFunctions {
 	}
 
 
-	public static void main(String[] args) {
+	/**
+	 * @param args
+	 */
+	public static void main(final String[] args) {
 		new DemoBasket().demo(args);
 	}
 
