@@ -45,6 +45,10 @@ import static org.ode4j.drawstuff.DrawStuff.*;
 import static org.ode4j.ode.OdeMath.*;
 
 
+/**
+ *
+ * @author Tilmann Zaeschke
+ */
 public class DemoCards extends dsFunctions {
 
 	private static int levels = 5;
@@ -228,7 +232,10 @@ public class DemoCards extends dsFunctions {
 		}
 	}
 
-	public static void main(String[] args)
+	/**
+	 * @param args
+	 */
+	public static void main(final String[] args)
 	{
 		new DemoCards().demo(args);
 	}
@@ -254,6 +261,7 @@ public class DemoCards extends dsFunctions {
 
 		contactgroup.destroy();
 		world.destroy();
+		ground.destroy();
 		space.destroy();
 
 		OdeHelper.closeODE();
