@@ -47,6 +47,9 @@ import org.ode4j.ode.DGeom.DNearCallback;
 import static org.ode4j.drawstuff.DrawStuff.*;
 
 
+/**
+ *
+ */
 public class DemoKinematic extends dsFunctions {
 
 	private DWorld world;
@@ -70,7 +73,7 @@ public class DemoKinematic extends dsFunctions {
 	    	body = OdeHelper.createBody(world);
 	        geom = OdeHelper.createBox(space, 0.2, 0.2, 0.2);
 	        DMass mass = OdeHelper.createMass();
-	        mass.setBox(1, 0.2, 0.2, 0.2);
+	        mass.setBox(10, 0.2, 0.2, 0.2);
 	        body.setMass(mass);
 	        geom.setData(this);
 	        geom.setBody(body);
@@ -97,7 +100,7 @@ public class DemoKinematic extends dsFunctions {
 	    
 	    double px = Math.random() * 2 - 1;
 	    double py = Math.random() * 2 - 1;
-	    double pz = 3;
+	    double pz = 2.5;
 	    box.body.setPosition(px, py, pz);
 	    
 	    boxes.add(box);
@@ -161,21 +164,21 @@ public class DemoKinematic extends dsFunctions {
 	}
 
     private static float t=0;
-	public void simLoop(boolean pause)
+	private void simLoop(boolean pause)
 	{
 	    if (!pause) {
-	        final double timestep = 0.005;
+	        final double timestep = 0.04;
 
 	        // this does a hard-coded circular motion animation
 	        t += timestep/4;
 	        if (t > 2*Math.PI)
 	            t = 0;
-	        double px = Math.cos(t);
-	        double py = Math.sin(t);
-	        double vx = -Math.sin(t)/4;
-	        double vy = Math.cos(t)/4;
-	        kbody.setPosition(px, py, .5);
-	        kbody.setLinearVel(vx, vy, 0);
+	        DVector3 next_pos = new DVector3( Math.cos(t), Math.sin(t), 0.5 );
+	        DVector3 vel = new DVector3();
+	        // vel = (next_pos - cur_pos) / timestep
+	        vel.eqDiff(next_pos, kbody.getPosition());
+	        vel.scale(1/timestep);
+	        kbody.setLinearVel(vel);
 	        // end of hard-coded animation
 	        
 	        space.collide(0, nearCallback);
@@ -217,7 +220,10 @@ public class DemoKinematic extends dsFunctions {
 	    }
 	}
 
-	public static void main(String[] args) {
+	/**
+	 * @param args
+	 */
+	public static void main(final String[] args) {
 		new DemoKinematic().demo(args);
 	}
 	
