@@ -59,15 +59,6 @@ import static org.ode4j.ode.OdeMath.*;
  */
 class DemoCrash extends dsFunctions {
 
-	// select the method you want to test here (only uncomment *one* line)
-	//#define QUICKSTEP 1
-	////#define STEPFAST 1
-	private enum STEP {
-		QUICKSTEP,
-		STEPFAST;
-	}
-	private static final STEP STEPPER = STEP.QUICKSTEP;
-
 	// some constants
 
 	private static final float LENGTH = 3.5f;		// chassis length
@@ -202,8 +193,6 @@ class DemoCrash extends dsFunctions {
 				"\t'2' to lower the cannon.\n" +
 				"\t'x' to shoot from the cannon.\n" +
 				"\t'f' to toggle fast step mode.\n" +
-				"\t'+' to increase AutoEnableDepth.\n" +
-				"\t'-' to decrease AutoEnableDepth.\n" +
 		"\t'r' to reset simulation.\n");
 	}
 
@@ -502,12 +491,6 @@ class DemoCrash extends dsFunctions {
 		case 'f': case 'F':
 			doFast = !doFast;
 			break;
-		case '+':
-//TODO TZ			dWorldSetAutoEnableDepthSF1 (world, dWorldGetAutoEnableDepthSF1 (world) + 1);
-			break;
-		case '-':
-//TODO	TZ		dWorldSetAutoEnableDepthSF1 (world, dWorldGetAutoEnableDepthSF1 (world) - 1);
-			break;
 		case 'r': case 'R':
 			resetSimulation();
 			break;
@@ -549,11 +532,10 @@ class DemoCrash extends dsFunctions {
 		dsSetTexture (DS_TEXTURE_NUMBER.DS_WOOD);
 
 		if (!pause) {
-			if (BOX) {//#ifdef BOX
+			if (BOX) {
 				//dBodyAddForce(body[bodies-1],lspeed,0,0);
-				//TODO report, this did not compile
 				dBodyAddForce(body[bodies-1],speed,0,0);
-			}//#endif
+			}
 			for (j = 0; j < joints; j++)
 			{
 				double curturn = dJointGetHinge2Angle1 (joint[j]);
@@ -568,11 +550,7 @@ class DemoCrash extends dsFunctions {
 			if (doFast)
 			{
 				dSpaceCollide (space,0,nearCallback);
-				if (STEPPER == STEP.QUICKSTEP) {//#if defined(QUICKSTEP)
-					dWorldQuickStep (world,0.05);
-				} else { //#elif defined(STEPFAST)
-//TODO TZ					dWorldStepFast1 (world,0.05,ITERS);
-				}//#endif
+				dWorldQuickStep (world,0.05);
 				dJointGroupEmpty (contactgroup);
 			}
 			else
